methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var go = true
  if (!faceMur()){
    avance()
    if (getCouleurSol()==Color.green){
      go=true

    }else{

      go=false
    }
  }
  recule()
  return go
}



